fix z-index of share popup

--- a/src/components/CardNewsNew/index.scss
+++ b/src/components/CardNewsNew/index.scss
@@ -588,6 +588,7 @@
     }
   }
   .ya-share2__popup {
+    z-index: 0;
     right: -25px;
   }
 }
