--- a/src/pages/NewsFeed/components/NewsFeedItem/index.scss
+++ b/src/pages/NewsFeed/components/NewsFeedItem/index.scss
@@ -596,5 +596,6 @@
   .ya-share2__popup {
     right: -5px;
     top: 210px!important;
+    z-index: 98;
   }
 }
